--- a/.env
+++ b/.env
@@ -1,6 +1,14 @@
 # Server Configuration
 PORT=8080
 
+# RabbitMQ Configuration
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+RABBITMQ_VHOST=/
+RABBITMQ_QUEUE=stock_data
+
 # Stock API Configuration
 STOCK_API_BASE_URL=https://stooq.com/q/l/
 STOCK_API_PARAMS=?s=%s&f=sd2t2ohlcv&h&e=csv
